# forum-example-android-build-ci

./: Cargo.toml  flake.nix  package-lock.json  package.json  tree.txt
.github/workflows/: release-app.yaml  release-tauri-app.yaml
crates/validate_trait/: Cargo.toml
crates/validate_trait/src/: lib.rs
dnas/forum/workdir/: dna.yaml
dnas/forum/zomes/integrity/posts/: Cargo.toml
dnas/forum/zomes/integrity/posts/src/: comment.rs  lib.rs  post.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: package.json
tests/src/forum/posts/: comment.test.ts  post.test.ts
ui/: package.json  vite.config.ts  vite.config.ts.timestamp-1720400851153-42f6b2a2efc5e.mjs
ui/src/: App.svelte
ui/src/forum/posts/: AllPosts.svelte  CommentDetail.svelte  CommentsForPost.svelte  CreateComment.svelte  CreatePost.svelte  EditPost.svelte  NetworkInfo.svelte  PostDetail.svelte
