[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "src-tauri", "src-tauri"]
resolver = "2"

[workspace.dependencies]
hdi = { path = "../Holochain/holochain/crates/hdi" }
hdk = { path = "../Holochain/holochain/crates/hdk" }
# hdi = "0.4.1"
# hdk = "0.3.1"
serde = "1.0"

[workspace.dependencies.posts]
path = "dnas/forum/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/forum/zomes/integrity/posts"
